@@ -15,6 +15,6 @@ DIST gitlab-ce-8.11.0_rc1.tar.gz 21523791 SHA256 1c3217bb1253359335025e6b5222cd1
 EBUILD gitlab-ce-8.10.6.ebuild 11710 SHA256 1659a2e43491488fa6fbbee1699cc4138e8938f694e73310e5faf45fbd9f2578 SHA512 70304f8fe862988d4092dd37c5a66fdfec56c9cb2d62a78f2cdf365a0c629606c6fb9081dbdc7e68530d43894d1cb645d168db8f3f0c8a9999873afd9032ec52 WHIRLPOOL dbf26294a9d6eb4258a67c64844370f1423fa59210b306bc66ea53a902cbc564b1cd084b765759e93d7970df30417e6482dfbbf271dda8d387ef006837123ac3
 EBUILD gitlab-ce-8.11.0.ebuild 11703 SHA256 f95aa4a60c85da0155df6b989e343296eba23a6c2f12055c5f94bee53f5d9bc0 SHA512 6d1c7c3e3139d456a7b22431b326401a9b56e435000a02a572bfdbb52c5495e098b0406ab9b8051a2a901878e3a3a2c4332af9a0bf50ff1a36051f9436c1ddbe WHIRLPOOL bd92de9d5fda4a4b1802e814a55ea1e1a9848a9e085b9ad88ba108771dc68953156c8cecde64ef2250eba8f2b9568f73969460aa61c4901957d9b7771558ed9c
 EBUILD gitlab-ce-8.11.0_rc1.ebuild 11654 SHA256 a73c20f2671fa997bab4b715c7cd2d40f74e1900a96d5805c8a16139fd367736 SHA512 a8af8ffb14f2f190885597f1afa9cd3d2460c47933d45c49f60cffc5f57631b63b04b2a162ed9d520a64146f6d8701699640b9718475d6adbdf61399efd00cfa WHIRLPOOL 7eb709c573f046f519410d7ccfd1e5f2f662e253355243bdc1bf35cc9021f554fd4b0da07beb9826247a70a345d411ef4e6e2f12b3098227da4847d356268495
-EBUILD gitlab-ce-9999.ebuild 12347 SHA256 8a0f60ef3cb5ba17a782702d9cb6273c1a6217e067a2f88968b052fd21873061 SHA512 6fe3bab97466c0decc017eb95ad98717cdff9f55b4ef10823a92075781afd4d73141843fe097318a9caf821d529f2daa20c3550de80bd57ed7871784725e7979 WHIRLPOOL 36e3d61644100a4137d66cd7c91e97ad9e6f35e9bd8b17b79bc7d99383f018159ea4322f15ebf7487935c720c8c9df51412df2dde4d584b5fd276b801e0cf017
-MISC ChangeLog 5211 SHA256 b3f213de87d066f6d3f2c7edef456bba8a30080929e5ea9c79fd13778cf32e9d SHA512 6e17748b4b252f9157936f20b695047bf29c0c45add6bdfde3f864dd5af3ec649d838d543d3994fbe2b4fa394a44cd7e2542ecae13bf4f9ec91753d0c79d826c WHIRLPOOL 8e62f5549765bdd2405bde2482a4136e140deee49555c782d2562f391bd77ecfee06d6d9a7fe4a6d68fed702a0afa8fbbbff86b426485c246835282f98765fb7
+EBUILD gitlab-ce-9999.ebuild 11644 SHA256 049dcd6ae1eedc7816fc0e1052b868ee3099e902316c751f395d5f1be5139d2d SHA512 f0c664af009419c6ef2f6bca661c5f9656f258ecbcf980d9b02a1920bc1049ac55409b2ff6c451b0eb7129f943b4263efba81b254e42d815f7089af057b01fc5 WHIRLPOOL 7e66b8d3e512709d8ec6ce59d9d87ef3664a12901fc5de478e204e3e7bebd11b3b26c9c996679eeecae10667e9a885e815dcadf49a41baeb0094148cec779f26
+MISC ChangeLog 5353 SHA256 ec609588575a93774d5ce3f75653fbc90a29db598eff012de58d18dc3d1c38f9 SHA512 0a91171c659a410e979ce854170fdef2b74c6c4e28a6eb7e1df04303e2741ded2a21c0b272570a0010039f6288e49c690b119ac5b72efb9fd51e23cd98d4cfbe WHIRLPOOL 6dc13ae5519184c02136742244661f3061edd8721b5f5f9fd9f1dfbf8750d964624559a153b367bdd5a01a984ff4d08f859d0820682b38d9c68b289220574166
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
