@@ -52,9 +52,9 @@ CDEPEND="
 	virtual/pkgconfig"
 COMMON_DEPEND="
 	${GEMS_DEPEND}
-	>=dev-vcs/gitlab-shell-3.2.1
+	>=dev-vcs/gitlab-shell-3.4.0
 	>=dev-vcs/git-2.7.4
-	>=dev-vcs/gitlab-workhorse-0.7.8
+	>=dev-vcs/gitlab-workhorse-0.7.10
 	kerberos? ( !app-crypt/heimdal )
 	rugged_use_system_libraries? ( net-libs/http-parser dev-libs/libgit2:0/24 )"
 DEPEND="
@@ -77,7 +77,7 @@ ruby_add_bdepend "
 #
 RUBY_PATCHES=(
 	"${PN}-8.7.5-fix-sendmail-config.patch"
-	"${PN}-8.9.1-fix-redis-config-path.patch"
+	"${PN}-8.11.0-fix-redis-config-path.patch"
 )
 
 MY_NAME="gitlab"
@@ -209,14 +209,11 @@ all_ruby_install() {
 	rm -Rf vendor/bundle/ruby/*/cache
 	rm -Rf vendor/bundle/ruby/*/bundler/gems/charlock_holmes-dde194609b35/.git
 
-	# fix permissions
-	fowners -R ${MY_USER}:${MY_USER} ${dest} ${temp} ${logs}
-
 	## RC script ##
 
 	if use systemd ; then
 		ewarn "Beware: systemd support has not been tested, use at your own risk!"
-		systemd_dounit "${FILESDIR}/gitlab-sidekiq.service"
+		systemd_newunit "${FILESDIR}/gitlab-8.10.6-sidekiq.service" "gitlab-sidekiq.service"
 		systemd_dounit "${FILESDIR}/gitlab-unicorn.service"
 		systemd_dounit "${FILESDIR}/gitlab-workhorse.service"
 		systemd_dounit "${FILESDIR}/gitlab-mailroom.service"
@@ -236,6 +233,9 @@ all_ruby_install() {
 
 		newinitd "${T}/${rcscript}" "${MY_NAME}"
 	fi
+
+	# fix permissions
+	fowners -R ${MY_USER}:${MY_USER} ${dest} ${temp} ${logs}
 }
 
 pkg_postinst() {
@@ -286,31 +286,12 @@ pkg_postinst() {
 }
 
 pkg_config() {
-	local shell_conf='/etc/gitlab-shell.yml'
-
 	einfo "Checking configuration files"
 
 	if [ ! -r "${CONF_DIR}/database.yml" ]; then
 		eerror "Copy ${CONF_DIR}/database.yml.* to"
 		eerror "${CONF_DIR}/database.yml and edit this file in order to configure your"
 		eerror "database settings for \"production\" environment."; die
-	fi
-
-	# check gitlab-shell configuration
-	if [ -r ${shell_conf} ]; then
-		local shell_repos_path="$(ryaml ${shell_conf} repos_path)"
-		local gitlab_repos_path="$(ryaml ${CONF_DIR}/gitlab.yml \
-			production gitlab_shell repos_path)"
-
-		if [ ! "${shell_repos_path}" -ef "${gitlab_repos_path}" ]; then
-			eerror "repos_path in ${CONF_DIR}/gitlab.yml and ${shell_conf}"
-			eerror "must points to the same location! Fix the repos_path location and"
-			eerror "run this again."; die
-		fi
-	else
-		ewarn "GitLab Shell checks skipped, could not find config file at"
-		ewarn "${shell_conf}. Make sure that you have gitlab-shell properly"
-		ewarn "installed and that repos_path is the same as in GitLab."
 	fi
 
 	local email_from="$(ryaml ${CONF_DIR}/gitlab.yml production gitlab email_from)"
